[BUG] 26886 26827 - decrease footer z-index & overridden border-bottom of OX_GRID

--- a/bos/src/client/packages/panels/src/_panel.scss
+++ b/bos/src/client/packages/panels/src/_panel.scss
@@ -102,7 +102,7 @@
   bottom: 0 !important;
   flex-direction: row-reverse !important;
   background-color: #275362 !important;
-  z-index: 99999;
+  z-index: 999;
 }
 .footer-CR .coppyRight {
   color: #fff;
